--- a/src/styles/components/_comparaisonword.scss
+++ b/src/styles/components/_comparaisonword.scss
@@ -31,6 +31,6 @@
         grid-template-columns: repeat(2, 1fr);
         grid-column: 2;
         align-self: start;
-
+        height: 100%;
     }
 }
