--- a/src/styles/components/_topmots.scss
+++ b/src/styles/components/_topmots.scss
@@ -2,6 +2,7 @@
     @include section-style;
     @media (min-width : $size-desktop) {
         grid-column: 2;
+        height: 100%;
     }
 }
 .topmots__graph{
